added card named query