@@ -1,45 +1,78 @@
 package com.solovev.dao.namedquery;
 
 import com.solovev.dao.CardsDao;
+import com.solovev.dao.CategoriesDao;
+import com.solovev.dao.UserDao;
 import com.solovev.model.Card;
 
-import java.util.Collection;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
+
+import static java.util.Objects.isNull;
 
 public class CardsDaoNamedQuery implements CardsDao {
+
+    private final DaoFacade<Card> daoFacade = new DaoFacade<>(Card.class);
+    private final CategoriesDao categoriesDao = new CategoriesDaoNamedQuery();
+    private final UserDao userDaoNamedQuery = new UserDaoNamedQuery();
+
     @Override
     public Collection<Card> getByUser(Long userId) {
-        return List.of();
+        var foundUser = userDaoNamedQuery.get(userId);
+        return foundUser.isPresent()
+                ? daoFacade.getResults("Card_getByUser", "user", foundUser.get())
+                : Collections.emptyList();
     }
 
     @Override
     public Collection<Card> getByCategory(Long categoryId) {
-        return List.of();
+        var category = categoriesDao.get(categoryId);
+        return category.isPresent()
+                ? daoFacade.getResults("Card_getByCategory", "category", category.get())
+                : Collections.emptyList();
     }
 
     @Override
     public Optional<Card> get(long id) {
-        return Optional.empty();
+        return daoFacade.getResult("Card_getById", "id", id);
     }
 
     @Override
     public Collection<Card> get() {
-        return List.of();
+        return daoFacade.getResults("Card_getAll");
     }
 
     @Override
     public boolean add(Card elem) throws IllegalArgumentException {
-        return false;
+        var card = getCardMap(elem);
+        var id = daoFacade.executeNativeUpdate("Card_insert", card);
+        elem.setId(id);
+        return true;
     }
 
     @Override
     public Optional<Card> delete(long id) {
-        return Optional.empty();
+        var found = get(id);
+        found.ifPresent(__ -> daoFacade.executeNamedUpdate("Card_delete", Map.of("id", id)));
+        return found;
     }
 
     @Override
     public boolean update(Card elem) {
-        return false;
+        var cardMap = getCardMap(elem);
+        cardMap.put("id", elem.getId());
+        return daoFacade.executeNamedUpdate("Card_update", cardMap);
+    }
+
+    private Map<String, Object> getCardMap(Card elem) {
+        var category = elem.getCategory();
+        if (isNull(category)) {
+            throw new IllegalArgumentException("category is null");
+        }
+        Map<String, Object> categoriesMap = new HashMap<>();
+        categoriesMap.put("question", elem.getQuestion());
+        categoriesMap.put("answer", elem.getAnswer());
+        categoriesMap.put("category_id", elem.getCategory().getId());
+        categoriesMap.put("creation_date", elem.getCreationDate());
+        return categoriesMap;
     }
 }
